examples/test/testpolicy7305.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7305
  namespace: namespace76
spec:
  podSelector:
    matchLabels:
      key46: value29
      key3: value0
      key38: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value48
      podSelector:
        matchLabels:
          key10: value35
